# ucalg-baja-cloud

./: .dockerignore  Cargo.toml  docker-compose.yaml  dockerfile
.forgejo/workflows/: all_envs.yml  all_test.yml  containerize.yml  doc_test.yml
Database/: Merch.xlsx  Orders.xlsx  merch.yaml  sponsorship.yaml
src/: lib.rs  main.rs
src/database/: database.rs  mod.rs
src/merch_shop/: checkout_recieve.rs  merch_get.rs  mod.rs  testing.md
src/sponsors/: mod.rs  sponsors_get.rs
src/xl_init/: init_xl_doc.rs  mod.rs
