[package]
name = "ucalg-baja-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
